@@ -1,17 +1,16 @@
 package net.minecraft.util.datafix.fixes;
 
-import com.google.common.collect.ImmutableMap;
-import com.mojang.datafixers.DSL;
 import com.mojang.datafixers.DataFix;
 import com.mojang.datafixers.TypeRewriteRule;
 import com.mojang.datafixers.schemas.Schema;
+import java.util.Map;
 
 public class MapIdFix extends DataFix {
-   public MapIdFix(Schema var1, boolean var2) {
-      super(var1, var2);
+   public MapIdFix(Schema var1) {
+      super(var1, true);
    }
 
    protected TypeRewriteRule makeRule() {
-      return this.fixTypeEverywhereTyped("Map id fix", this.getInputSchema().getType(References.SAVED_DATA_MAP_DATA), (var0) -> var0.update(DSL.remainderFinder(), (var0x) -> var0x.createMap(ImmutableMap.of(var0x.createString("data"), var0x))));
+      return this.writeFixAndRead("Map id fix", this.getInputSchema().getType(References.SAVED_DATA_MAP_DATA), this.getOutputSchema().getType(References.SAVED_DATA_MAP_DATA), (var0) -> var0.createMap(Map.of(var0.createString("data"), var0)));
    }
 }
